--- a/index.html
+++ b/index.html
@@ -1,7 +1,91 @@
-<!DOCTYPE html>
-<html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
-</html>
+/* RPG fantasy vibes style */
+body {
+  margin: 0;
+  padding: 0;
+  font-family: 'MedievalSharp', cursive;
+  background: url('assets/bg-scroll.png') repeat;
+  color: #f5f0e1;
+  background-color: #1a1a1a;
+}
+
+header {
+  background-color: #2c1a1a;
+  text-align: center;
+  padding: 2rem 1rem;
+  border-bottom: 4px solid #8e6f3e;
+}
+
+header h1 {
+  font-size: 3rem;
+  margin: 0;
+  color: #f9d67a;
+  text-shadow: 2px 2px #000;
+}
+
+header p {
+  margin-top: 0.5rem;
+  color: #ccc;
+  font-size: 1.2rem;
+}
+
+nav {
+  margin-top: 1rem;
+}
+
+nav a {
+  margin: 0 1rem;
+  color: #f9d67a;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+section {
+  padding: 2rem;
+  max-width: 1000px;
+  margin: auto;
+}
+
+h2 {
+  color: #f9d67a;
+  border-bottom: 2px solid #8e6f3e;
+  padding-bottom: 0.5rem;
+}
+
+.gallery {
+  display: flex;
+  gap: 1rem;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.gallery img {
+  width: 300px;
+  height: auto;
+  border: 3px solid #8e6f3e;
+  box-shadow: 0 0 10px #000;
+}
+
+.download-button {
+  display: inline-block;
+  padding: 1rem 2rem;
+  background-color: #8e6f3e;
+  color: #fff;
+  text-decoration: none;
+  font-size: 1.2rem;
+  font-weight: bold;
+  border-radius: 10px;
+  box-shadow: 2px 2px 8px #000;
+  transition: background 0.3s ease;
+}
+
+.download-button:hover {
+  background-color: #a88447;
+}
+
+footer {
+  text-align: center;
+  padding: 1rem;
+  background-color: #2c1a1a;
+  color: #aaa;
+  font-size: 0.9rem;
+}
