--- a/index.html
+++ b/index.html
@@ -1,91 +1,48 @@
-/* RPG fantasy vibes style */
-body {
-  margin: 0;
-  padding: 0;
-  font-family: 'MedievalSharp', cursive;
-  background: url('assets/bg-scroll.png') repeat;
-  color: #f5f0e1;
-  background-color: #1a1a1a;
-}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Plotaria: The Curse of Artifact</title>
+  <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=MedievalSharp&display=swap" rel="stylesheet">
+</head>
+<body>
+  <header>
+    <h1>Plotaria: The Curse of Artifact</h1>
+    <p>An educational RPG adventure about Greek myth and Indonesian culture</p>
+    <nav>
+      <a href="#about">About</a>
+      <a href="#screenshots">Screenshots</a>
+      <a href="#download">Download</a>
+    </nav>
+  </header>
 
-header {
-  background-color: #2c1a1a;
-  text-align: center;
-  padding: 2rem 1rem;
-  border-bottom: 4px solid #8e6f3e;
-}
+  <section id="about">
+    <h2>About the Game</h2>
+    <p>
+      Join Necro and Lumire on an epic turn-based journey that blends Greek legends and Indonesian folklore.
+      Plotaria is more than just a game—it's an interactive story that teaches you as you play.
+    </p>
+  </section>
 
-header h1 {
-  font-size: 3rem;
-  margin: 0;
-  color: #f9d67a;
-  text-shadow: 2px 2px #000;
-}
+  <section id="screenshots">
+    <h2>Screenshots</h2>
+    <div class="gallery">
+      <img src="screenshots/screen1.png" alt="Gameplay Screenshot 1" />
+      <img src="screenshots/screen2.png" alt="Gameplay Screenshot 2" />
+      <img src="screenshots/screen3.png" alt="Gameplay Screenshot 3" />
+    </div>
+  </section>
 
-header p {
-  margin-top: 0.5rem;
-  color: #ccc;
-  font-size: 1.2rem;
-}
+  <section id="download">
+    <h2>Download Demo</h2>
+    <p>Try the free demo and experience the adventure!</p>
+    <a href="demo/Plotaria-Demo.zip" class="download-button">Download Now</a>
+  </section>
 
-nav {
-  margin-top: 1rem;
-}
-
-nav a {
-  margin: 0 1rem;
-  color: #f9d67a;
-  text-decoration: none;
-  font-weight: bold;
-}
-
-section {
-  padding: 2rem;
-  max-width: 1000px;
-  margin: auto;
-}
-
-h2 {
-  color: #f9d67a;
-  border-bottom: 2px solid #8e6f3e;
-  padding-bottom: 0.5rem;
-}
-
-.gallery {
-  display: flex;
-  gap: 1rem;
-  flex-wrap: wrap;
-  justify-content: center;
-}
-
-.gallery img {
-  width: 300px;
-  height: auto;
-  border: 3px solid #8e6f3e;
-  box-shadow: 0 0 10px #000;
-}
-
-.download-button {
-  display: inline-block;
-  padding: 1rem 2rem;
-  background-color: #8e6f3e;
-  color: #fff;
-  text-decoration: none;
-  font-size: 1.2rem;
-  font-weight: bold;
-  border-radius: 10px;
-  box-shadow: 2px 2px 8px #000;
-  transition: background 0.3s ease;
-}
-
-.download-button:hover {
-  background-color: #a88447;
-}
-
-footer {
-  text-align: center;
-  padding: 1rem;
-  background-color: #2c1a1a;
-  color: #aaa;
-  font-size: 0.9rem;
-}
+  <footer>
+    <p>&copy; 2025 WeTry Indonesia</p>
+  </footer>
+</body>
+</html>
