--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
   <section id="download">
     <h2>Download Demo</h2>
     <p>Try the free demo and experience the adventure!</p>
-    <a href="demo/Plotaria-Demo.zip" class="download-button">Download Now</a>
+    <a href="https://drive.usercontent.google.com/download?id=1IvJ8N07Ubvo5a62PM3HKiMevHivboEg9&export=download&authuser=0&confirm=t&uuid=d392fc6c-0e53-45cd-92e4-aa74d21976d2&at=AN8xHoqx3kiGx7usTy4xJnyatdsK%3A1752647884337" class="download-button" target="_blank">Download Now</a>
+
   </section>
 
   <footer>
