--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
     </div>
   </section>
 
+  <audio autoplay loop>
+  <source src="audio/bgm.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
+  </audio>
+
+
   <section id="download">
     <h2>Download Demo</h2>
     <p>Try the free demo and experience the adventure!</p>
