--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   </section>
 
   <audio autoplay loop>
-  <source src="audio/bgm.mp3" type="audio/mpeg">
+  <source src="audio/bgm.ogg" type="audio/mpeg">
   Your browser does not support the audio element.
   </audio>
 
