--- a/index.html
+++ b/index.html
@@ -45,7 +45,12 @@
     <h2>Download Demo</h2>
     <p>Try the free demo and experience the adventure!</p>
     <a href="https://drive.usercontent.google.com/download?id=1IvJ8N07Ubvo5a62PM3HKiMevHivboEg9&export=download&authuser=0&confirm=t&uuid=d392fc6c-0e53-45cd-92e4-aa74d21976d2&at=AN8xHoqx3kiGx7usTy4xJnyatdsK%3A1752647884337" class="download-button" target="_blank">Download Now</a>
-
+    
+    <audio id="bgm" autoplay loop>
+    <source src="audio/bgm.ogg" type="audio/ogg">
+    Your browser does not support the audio element.
+    </audio>
+    
   </section>
 
   <footer>
