--- a/index.html
+++ b/index.html
@@ -42,15 +42,20 @@
 
 
   <section id="download">
-    <h2>Download Demo</h2>
-    <p>Try the free demo and experience the adventure!</p>
-    <a href="https://drive.usercontent.google.com/download?id=1IvJ8N07Ubvo5a62PM3HKiMevHivboEg9&export=download&authuser=0&confirm=t&uuid=d392fc6c-0e53-45cd-92e4-aa74d21976d2&at=AN8xHoqx3kiGx7usTy4xJnyatdsK%3A1752647884337" class="download-button" target="_blank">Download Now</a>
+  <h2>Download Demo</h2>
+  <p>Try the free demo and experience the adventure!</p>
+  <div class="download-buttons">
+    <a href="https://drive.usercontent.google.com/download?id=1IvJ8N07Ubvo5a62PM3HKiMevHivboEg9&export=download&authuser=0" class="download-button" target="_blank"> Download for PC</a>
+    <a href="https://drive.usercontent.google.com/download?id=1sBN9WM96Inx0RoUMtQRjqgZYZyYdYzdc&export=download&authuser=0" class="download-button" target="_blank"> Download for Android</a>
+  </div>
+</section>
+
     
     <audio id="bgm" autoplay loop>
     <source src="audio/bgm.ogg" type="audio/ogg">
     Your browser does not support the audio element.
     </audio>
-    
+
   </section>
 
   <footer>
