--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
     
     <audio id="bgm" autoplay loop>
-    <source src="audio/bgm.ogg" type="audio/ogg">
+    <source src="audio/bgm.mp3" type="audio/mpeg">
     Your browser does not support the audio element.
     </audio>
 
