--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <header>
     <h1>Plotaria: The Curse of Artifact</h1>
-    <p>An educational RPG adventure about Greek myth and Indonesian culture</p>
+    <p>Make your fantasy world come true</p>
     <nav>
       <a href="#about">About</a>
       <a href="#screenshots">Screenshots</a>
@@ -21,8 +21,8 @@
   <section id="about">
     <h2>About the Game</h2>
     <p>
-      Join Necro and Lumire on an epic turn-based journey that blends Greek legends and Indonesian folklore.
-      Plotaria is more than just a game—it's an interactive story that teaches you as you play.
+      Join Necro and Lumire on an epic turn based journey that blends Greek legends and Indonesian folklore.
+      Plotaria is more than just a game it's an interactive story that teaches you as you play.
     </p>
   </section>
 
