--- a/index.html
+++ b/index.html
@@ -35,10 +35,11 @@
     </div>
   </section>
 
-  <audio autoplay loop>
+  <audio id="bgm" autoplay loop>
   <source src="audio/bgm.mp3" type="audio/mpeg">
   Your browser does not support the audio element.
   </audio>
+  <button onclick="document.getElementById('bgm').play()">🎵 Play Music</button>
 
 
   <section id="download">
