--- a/index.html
+++ b/index.html
@@ -9,13 +9,16 @@
 </head>
 <body>
 
-  <!-- 🎬 COVER INTRO SCREEN -->
-  <div id="intro-screen">
-    <div class="intro-content">
-      <h1>Your journey starts here</h1>
-      <button id="startBtn">Start</button>
-    </div>
+  <!-- 🧱 INTRO SCREEN -->
+<div id="intro-screen">
+  <div class="intro-top"></div>
+  <div class="intro-bottom"></div>
+  <div class="intro-center">
+    <h1>Your journey starts here</h1>
+    <button id="startBtn">Start</button>
   </div>
+</div>
+
 
   <!-- 🔊 BGM -->
   <audio id="bgm" loop>
@@ -64,17 +67,21 @@
     <p>&copy; 2025 WeTry Indonesia</p>
   </footer>
 
-  <!-- 🎯 JS INTERACTION -->
   <script>
-    const startBtn = document.getElementById('startBtn');
-    const introScreen = document.getElementById('intro-screen');
-    const bgm = document.getElementById('bgm');
+  const startBtn = document.getElementById('startBtn');
+  const introScreen = document.getElementById('intro-screen');
+  const bgm = document.getElementById('bgm');
 
-    startBtn.addEventListener('click', () => {
+  startBtn.addEventListener('click', () => {
+    introScreen.classList.add('unlock');
+    bgm.play();
+    
+    // Delay 1s lalu sembunyikan elemen cover
+    setTimeout(() => {
       introScreen.style.display = 'none';
-      bgm.play();
-    });
-  </script>
+    }, 1000);
+  });
+</script>
 
 </body>
 </html>
