--- a/index.html
+++ b/index.html
@@ -54,13 +54,20 @@
   </section>
 
   <section id="download">
-    <h2>Download Demo</h2>
-    <p>Try the free demo and experience the adventure!</p>
-    <div class="download-buttons">
-      <a href="https://drive.usercontent.google.com/download?id=1IvJ8N07Ubvo5a62PM3HKiMevHivboEg9&export=download&authuser=0" class="download-button" target="_blank">🖥 Download for PC</a>
-      <a href="https://drive.usercontent.google.com/download?id=1sBN9WM96Inx0RoUMtQRjqgZYZyYdYzdc&export=download&authuser=0" class="download-button" target="_blank">📱 Download for Android</a>
-    </div>
-  </section>
+  <h2>Download Demo</h2>
+  <p>Try the free demo and experience the adventure!</p>
+  <div class="download-buttons">
+    <a href="https://drive.usercontent.google.com/download?id=1IvJ8N07Ubvo5a62PM3HKiMevHivboEg9&export=download&authuser=0" class="download-button" target="_blank">
+      <img src="https://cdn.jsdelivr.net/npm/simple-icons@v11/icons/windows.svg" alt="Windows" class="icon" />
+      Download for PC
+    </a>
+    <a href="https://drive.usercontent.google.com/download?id=1sBN9WM96Inx0RoUMtQRjqgZYZyYdYzdc&export=download&authuser=0" class="download-button" target="_blank">
+      <img src="https://cdn.jsdelivr.net/npm/simple-icons@v11/icons/android.svg" alt="Android" class="icon" />
+      Download for Android
+    </a>
+  </div>
+</section>
+
 
   <footer>
     <p>&copy; 2025 WeTry Indonesia</p>
