--- a/index.html
+++ b/index.html
@@ -54,20 +54,21 @@
     </div>
   </section>
 
-  <section id="download">
+<section id="download">
   <h2>Download Demo</h2>
   <p>Try the free demo and experience the adventure!</p>
   <div class="download-buttons">
     <a href="https://drive.usercontent.google.com/download?id=1IvJ8N07Ubvo5a62PM3HKiMevHivboEg9&export=download&authuser=0" class="download-button" target="_blank">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/4/48/Windows_logo_-_2021.svg" alt="Windows" class="emoji-icon" />
+      <img src="https://img.icons8.com/ios-filled/50/ffffff/windows8.png" class="emoji-icon" alt="Windows" />
       Download for PC
     </a>
     <a href="https://drive.usercontent.google.com/download?id=1sBN9WM96Inx0RoUMtQRjqgZYZyYdYzdc&export=download&authuser=0" class="download-button" target="_blank">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/d/d7/Android_robot.svg" alt="Android" class="emoji-icon" />
+      <img src="https://upload.wikimedia.org/wikipedia/commons/d/d7/Android_robot.svg" class="emoji-icon" alt="Android" />
       Download for Android
     </a>
   </div>
 </section>
+
 
 
 
