--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   <p>Try the free demo and experience the adventure!</p>
   <div class="download-buttons">
     <a href="https://drive.usercontent.google.com/download?id=1IvJ8N07Ubvo5a62PM3HKiMevHivboEg9&export=download&authuser=0" class="download-button" target="_blank">
-      <img src="https://img.icons8.com/ios-filled/50/ffffff/windows8.png" class="emoji-icon" alt="Windows" />
+      <img src="https://www.citypng.com/public/uploads/preview/hd-windows-11-logo-icon-transparent-background-701751694967888zqtluh5aaw.png" class="emoji-icon" alt="Windows" />
       Download for PC
     </a>
     <a href="https://drive.usercontent.google.com/download?id=1sBN9WM96Inx0RoUMtQRjqgZYZyYdYzdc&export=download&authuser=0" class="download-button" target="_blank">
