--- a/index.html
+++ b/index.html
@@ -11,14 +11,13 @@
 
   <!-- INTRO COVER SCREEN -->
   <div id="intro-screen">
-  <div class="cover-top"></div>
-  <div class="cover-bottom"></div>
-  <div class="cover-center">
-    <h1>Your journey starts here</h1>
-    <button id="startBtn">Start</button>
+    <div class="cover-top"></div>
+    <div class="cover-bottom"></div>
+    <div class="cover-center">
+      <h1>Your journey starts here</h1>
+      <button id="startBtn">Start</button>
+    </div>
   </div>
-</div>
-
 
   <!-- BACKGROUND MUSIC -->
   <audio id="bgm" loop>
@@ -26,7 +25,7 @@
     Your browser does not support the audio element.
   </audio>
 
-  <!-- MAIN WEBSITE CONTENT -->
+  <!-- MAIN CONTENT -->
   <header>
     <h1>Plotaria: The Curse of Artifact</h1>
     <p>Make your fantasy world come true</p>
@@ -41,7 +40,7 @@
     <h2>About the Game</h2>
     <p>
       Join Necro and Lumire on an epic turn based journey that blends Greek legends and Indonesian folklore.
-      Plotaria is more than just a game it's an interactive story that teaches you as you play.
+      Plotaria is more than just a game—it's an interactive story that teaches you as you play.
     </p>
   </section>
 
@@ -54,42 +53,39 @@
     </div>
   </section>
 
-<section id="download">
-  <h2>Download Demo</h2>
-  <p>Try the free demo and experience the adventure!</p>
-  <div class="download-buttons">
-    <a href="https://drive.usercontent.google.com/download?id=1IvJ8N07Ubvo5a62PM3HKiMevHivboEg9&export=download&authuser=0" class="download-button" target="_blank">
-      <img src="https://www.citypng.com/public/uploads/preview/hd-windows-11-logo-icon-transparent-background-701751694967888zqtluh5aaw.png" class="emoji-icon" alt="Windows" />
-      Download for PC
-    </a>
-    <a href="https://drive.usercontent.google.com/download?id=1sBN9WM96Inx0RoUMtQRjqgZYZyYdYzdc&export=download&authuser=0" class="download-button" target="_blank">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/d/d7/Android_robot.svg" class="emoji-icon" alt="Android" />
-      Download for Android
-    </a>
-  </div>
-</section>
-
-
-
+  <section id="download">
+    <h2>Download Demo</h2>
+    <p>Try the free demo and experience the adventure!</p>
+    <div class="download-buttons">
+      <a href="https://drive.usercontent.google.com/download?id=1IvJ8N07Ubvo5a62PM3HKiMevHivboEg9&export=download&authuser=0" class="download-button" target="_blank">
+        <img src="https://img.icons8.com/ios-filled/50/ffffff/windows8.png" class="emoji-icon" alt="Windows" />
+        Download for PC
+      </a>
+      <a href="https://drive.usercontent.google.com/download?id=1sBN9WM96Inx0RoUMtQRjqgZYZyYdYzdc&export=download&authuser=0" class="download-button" target="_blank">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/d/d7/Android_robot.svg" class="emoji-icon" alt="Android" />
+        Download for Android
+      </a>
+    </div>
+  </section>
 
   <footer>
     <p>&copy; 2025 WeTry Indonesia</p>
   </footer>
 
   <!-- JS UNLOCK -->
- <script>
-  const startBtn = document.getElementById('startBtn');
-  const intro = document.getElementById('intro-screen');
-  const bgm = document.getElementById('bgm');
+  <script>
+    const startBtn = document.getElementById('startBtn');
+    const intro = document.getElementById('intro-screen');
+    const bgm = document.getElementById('bgm');
 
-  startBtn.addEventListener('click', () => {
-    intro.classList.add('unlock');
-    bgm.play().catch(() => console.warn("Autoplay error"));
+    startBtn.addEventListener('click', () => {
+      intro.classList.add('unlock');
+      bgm.play().catch(() => console.warn("Autoplay error"));
 
-    setTimeout(() => {
-      intro.style.display = 'none';
-    }, 1700); // delay > 1.2s animasi
-  });
-</script>
+      setTimeout(() => {
+        intro.style.display = 'none';
+      }, 1700);
+    });
+  </script>
 </body>
 </html>
