--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Plotaria: The Curse of Artifact</title>
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=MedievalSharp&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
 
@@ -69,8 +70,14 @@
   </section>
 
   <footer>
-    <p>&copy; 2025 WeTry Indonesia</p>
-  </footer>
+  <p>&copy; 2025 WeTry Indonesia</p>
+  <div class="social-icons">
+    <a href="https://x.com/Wetry_Indonesia" target="_blank"><i class="fab fa-x-twitter"></i></a>
+    <a href="https://www.instagram.com/wetry_indonesia/" target="_blank"><i class="fab fa-instagram"></i></a>
+    <a href="https://www.facebook.com/WeTryIDN/" target="_blank"><i class="fab fa-facebook-f"></i></a>
+    <a href="https://discord.gg/vzJQKdXtEZ" target="_blank"><i class="fab fa-discord"></i></a>
+  </div>
+</footer>
 
   <!-- JS UNLOCK -->
   <script>
