--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
+  <button id="muteBtn" onclick="toggleMute()">
+  🔊
+</button>
+
 
   <!-- INTRO COVER SCREEN -->
   <div id="intro-screen">
@@ -84,6 +88,13 @@
     const startBtn = document.getElementById('startBtn');
     const intro = document.getElementById('intro-screen');
     const bgm = document.getElementById('bgm');
+    const bgMusic = document.getElementById("bgMusic");
+    const muteBtn = document.getElementById("muteBtn");
+
+    function toggleMute() {
+    bgMusic.muted = !bgMusic.muted;
+    muteBtn.textContent = bgMusic.muted ? "🔇" : "🔊";
+  }
 
     startBtn.addEventListener('click', () => {
       intro.classList.add('unlock');
